# qwen-reader

./: .gitignore  LICENSE  README.md  cspell.json  pyproject.toml
qwen_reader/: __init__.py  __main__.py  cli.py
qwen_reader/cli/: __init__.py  app.py  commands.py  options.py  rendering.py
qwen_reader/core/: __init__.py  model.py  storage.py  synthesis.py  text.py
scripts/: benchmark.py  generate_demos.ps1
tests/: conftest.py  test_cli.py  test_model.py  test_storage.py  test_synthesis.py  test_text.py
