[project]
name = "qwen-reader"
version = "0.1.0"
description = "Convert articles to listenable audio using Qwen3-TTS"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "qwen-tts>=0.1.0",
    "soundfile>=0.13.0",
    "numpy>=2.0.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
qwen-reader = "qwen_reader.cli:main"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["qwen_reader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
